--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^2.2.43",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
